updated french resource bundle

--- a/main/src/com/smartgwt/client/i18n/SmartGwtMessages_fr_FR.properties
+++ b/main/src/com/smartgwt/client/i18n/SmartGwtMessages_fr_FR.properties
@@ -9,19 +9,19 @@ dialog_WarnTitle=Attention
 dialog_AskTitle=Question
 dialog_AskForValueTitle=Entrez une valeur
 dialog_LoginTitle=Connectez-vous
-dialog_UserNameTitle=Nom d&#39;utilisateur
+dialog_UserNameTitle=Nom d''utilisateur
 dialog_PasswordTitle=Mot de passe
 dialog_LoginButtonTitle=Connexion
-dialog_LoginErrorMessage=Nom d&#39;utilisateur ou mot de passe invalide
+dialog_LoginErrorMessage=Nom d''utilisateur ou mot de passe invalide
 
 rpcManager_defaultPrompt=Connexion au serveur...
-rpcManager_timeoutErrorMessage=Temps d&#233;pass&#233;
+rpcManager_timeoutErrorMessage=Temps dépassé
 rpcManager_removeDataPrompt=Suppresion enregistrement(s)...
 rpcManager_saveDataPrompt=Sauvegarde du formulaire...
-rpcManager_fetchDataPrompt=Recherche des enregistrements correspondant &#224; vos crit&#232;res...
+rpcManager_fetchDataPrompt=Recherche des enregistrements correspondant à vos critères...
 
-operators_equalsTitle=&#233;gal
-operators_notEqualTitle=diff&#233;rent
+operators_equalsTitle=égal
+operators_notEqualTitle=différent
 operators_greaterThanTitle=plus grand que
 operators_lessThanTitle=plus petit que
 operators_greaterOrEqualTitle=supérieur ou égal à
@@ -41,50 +41,50 @@ operators_notContainsTitle=ne contient pas (respecte la casse)
 operators_notStartsWithTitle=ne commence pas par (respecte la casse)
 operators_notEndsWithTitle=ne se termine pas par (respecte la casse)
 operators_isNullTitle=est vide
-operators_notNullTitle=n&#39;est pas vide
-operators_regexpTitle=satisfait l&#39;expression (respecte la casse)
-operators_iregexpTitle=satisfait l&#39;expression
-operators_inSetTitle=est l&#39;un(e) de
-operators_notInSetTitle=n&#39;est pas l&#39;un(e) de
-operators_equalsFieldTitle=est &#233;gal &#224; un autre champ
-operators_notEqualFieldTitle=est diff&#233;rent d&#39;un autre champ
+operators_notNullTitle=n''est pas vide
+operators_regexpTitle=satisfait l''expression (respecte la casse)
+operators_iregexpTitle=satisfait l''expression
+operators_inSetTitle=est l''un(e) de
+operators_notInSetTitle=n''est pas l''un(e) de
+operators_equalsFieldTitle=est égal à un autre champ
+operators_notEqualFieldTitle=est différent d''un autre champ
 operators_andTitle=Satisfait tout
 operators_notTitle=Ne Satisfait aucun
 operators_orTitle=Safisfait certains
 
-grouping_upcomingTodayTitle=Aujourd&#39;hui
+grouping_upcomingTodayTitle=Aujourd''hui
 grouping_upcomingTomorrowTitle=Demain
 grouping_upcomingThisWeekTitle=Cette Semaine
 grouping_upcomingNextWeekTitle=Semaine Prochaine
 grouping_upcomingNextMonthTitle=Mois Prochain
 grouping_upcomingBeforeTitle=Avant
-grouping_upcomingLaterTitle=Apr&#232;s
+grouping_upcomingLaterTitle=Après
 grouping_byDayTitle=par Jour
 grouping_byWeekTitle=par Semaine
 grouping_byMonthTitle=par Mois
 grouping_byQuarterTitle=par Trimestre
-grouping_byYearTitle=par Ann&#233;e
+grouping_byYearTitle=par Année
 grouping_byDayOfMonthTitle=par Jour du Mois
-grouping_byUpcomingTitle=par ordre d&#39;arriv&#233;e
+grouping_byUpcomingTitle=par ordre d''arrivée
 grouping_byHoursTitle=par Heures
 grouping_byMinutesTitle=par Minutes
 grouping_bySecondsTitle=par Secondes
 grouping_byMillisecondsTitle=par Millisecondes
 
-validator_notABoolean=Doit &#234;tre une valeur vrai/faux.
-validator_notAString=Doit &#234;tre une cha&#238;ne de caract&#232;res.
-validator_notAnInteger=Doit &#234;tre une nombre entier.
-validator_notADecimal=Doit &#234;tre un nombre d&#233;cimal.
-validator_notADate=Doit &#234;tre une date.
-validator_mustBeLessThan==Doit &#234;tre au plus
-validator_mustBeGreaterThan=Doit &#234;tre au moins 
-validator_mustBeLaterThan=Doit &#234;tre plus tard que 
-validator_mustBeEarlierThan=Doit &#234;tre plus t&#244;t que
+validator_notABoolean=Doit être une valeur vrai/faux.
+validator_notAString=Doit être une chaîne de caractères.
+validator_notAnInteger=Doit être une nombre entier.
+validator_notADecimal=Doit être un nombre décimal.
+validator_notADate=Doit être une date.
+validator_mustBeLessThan==Doit être au plus
+validator_mustBeGreaterThan=Doit être au moins
+validator_mustBeLaterThan=Doit être plus tard que
+validator_mustBeEarlierThan=Doit être plus tôt que
 validator_mustBeShorterThan=Doit contenir moins de lettres que
 validator_mustBeLongerThan=Doit contenir plus de lettres que
 validator_mustBeExactLength=Doit contenir exactement le nombre de lettres
 validator_requiredField=Champ requis
-validator_notOneOf=N&#39;est pas une option valide
+validator_notOneOf=N''est pas une option valide
 
 date_shortDayNames_1=Dim
 date_shortDayNames_2=Lun
@@ -110,62 +110,62 @@ date_shortMonthNames_12=Dec
 time_AMIndicator= am
 time_PMIndicator= pm
 
-window_title=Fen&#234;tre sans titre
+window_title=Fenêtre sans titre
 
-dateChooser_todayButtonTitle=Aujourd&#39;hui
+dateChooser_todayButtonTitle=Aujourd''hui
 dateChooser_cancelButtonTitle=Annuler
 
-dynamicForm_errorsPreamble=Les erreurs suivantes ont &#233;t&#233; rencontr&#233;es
+dynamicForm_errorsPreamble=Les erreurs suivantes ont été rencontrées
 dynamicForm_unknownErrorMessage=Valeur invalide
 
 selectOtherItem_otherTitle=Autres...
 selectOtherItem_selectOtherPrompt=Autre valeur pour <br> ?
 
 dateItem_invalidDateStringMessage=date invalide
-dateItem_pickerIconPrompt=Afficher le S&#233;lecteur de Date
+dateItem_pickerIconPrompt=Afficher le Sélecteur de Date
 
 valuesManager_unknownErrorMessage=valeur invalide
 
-selection_selectionRangeNotLoadedMessage=Impossible de s&#233;lectionner autant d&#39;enregistrements d&#39;un coup.<br><br>Essayez de travailler avec moins d&#39;&#233;l&#233;ments.
+selection_selectionRangeNotLoadedMessage=Impossible de sélectionner autant d''enregistrements d''un coup.<br><br>Essayez de travailler avec moins d''éléments.
 
-listGrid_emptyMessage=Aucune donn&#233;e &#224; afficher.
-listGrid_loadingDataMessage=Chargement des donn&#233;es...
+listGrid_emptyMessage=Aucune donnée à afficher.
+listGrid_loadingDataMessage=Chargement des données...
 #listGrid_loadingMessage=
-listGrid_cancelEditingConfirmationMessage=Annuler cette &#233;dition va &#233;galement annuler toutes les &#233;ditions non sauv&#233;es pour cet enregistrement. Continuer ?
-listGrid_confirmDiscardEditsMessage=Cette action annulera toutes les modifications non sauv&#233;es pour cette liste.
+listGrid_cancelEditingConfirmationMessage=Annuler cette édition va également annuler toutes les éditions non sauvées pour cet enregistrement. Continuer ?
+listGrid_confirmDiscardEditsMessage=Cette action annulera toutes les modifications non sauvées pour cette liste.
 listGrid_discardEditsSaveButtonTitle=Sauver
 listGrid_freezeOnRightText=Geler par la droite
 listGrid_freezeOnLeftText=Geler par la gauche
 listGrid_sortFieldAscendingText=Trier par ordre Croissant
-listGrid_sortFieldDescendingText=Trier par ordre D&#233;croissant
+listGrid_sortFieldDescendingText=Trier par ordre Décroissant
 listGrid_fieldVisibilitySubmenuTitle=Colonnes
 listGrid_freezeFieldText=Geler
-listGrid_unfreezeFieldText=D&#233;geler
+listGrid_unfreezeFieldText=Dégeler
 listGrid_groupByText=Grouper par
-listGrid_ungroupText=D&#233;grouper
+listGrid_ungroupText=Dégrouper
 
 dataBoundComponent_addFormulaFieldText=Ajouter une colonne Formule...
-dataBoundComponent_editFormulaFieldText=&#201;diter la formule...
+dataBoundComponent_editFormulaFieldText=Éditer la formule...
 dataBoundComponent_addSummaryFieldText=Ajouter une colonne Somme...
-dataBoundComponent_editSummaryFieldText=&#233;diter le format de la somme...
+dataBoundComponent_editSummaryFieldText=Éditer le format de la somme...
 dataBoundComponent_requiredFieldMessage=Champ requis
 
-treeGrid_parentAlreadyContainsChildMessage=Cet &#233;l&#233;ment contient d&#233;j&#224; un &#233;l&#233;ment enfant avec ce nom.
-treeGrid_cantDragIntoSelfMessage=Vous ne pouvez pas d&#233;placer cet &#233;l&#233;ment vers lui-m&#234;me.
-treeGrid_cantDragIntoChildMessage=Vous ne pouvez pas d&#233;placer un &#233;l&#233;ment vers l&#39;un de ses &#233;l&#233;ments enfant.
+treeGrid_parentAlreadyContainsChildMessage=Cet élément contient déjà un élément enfant avec ce nom.
+treeGrid_cantDragIntoSelfMessage=Vous ne pouvez pas déplacer cet élément vers lui-même.
+treeGrid_cantDragIntoChildMessage=Vous ne pouvez pas déplacer un élément vers l''un de ses éléments enfant.
 
 menuButton_title=Voir le Menu
 
-formulaBuilder_autoHideCheckBoxLabel=Cacher automatiquement les champs utilis&#233;s dans la formule
+formulaBuilder_autoHideCheckBoxLabel=Cacher automatiquement les champs utilisés dans la formule
 formulaBuilder_helpTextIntro=Pour les opérations simples, utiliser directement les opérateurs (+-/%)<p>Les fonctions suivantes sont disponibles :
 formulaBuilder_instructionsTextStart=Les champs suivants peuvent être utilisés pour ce
-formulaBuilder_samplePromptForRecord=Pour l'enregistrment :
+formulaBuilder_samplePromptForRecord=Pour l''enregistrment :
 formulaBuilder_samplePromptOutput=Résultat:
 
-summaryBuilder_autoHideCheckBoxLabel=Cacher automatiquement les champs utilis&#233;s dans la somme
+summaryBuilder_autoHideCheckBoxLabel=Cacher automatiquement les champs utilisés dans la somme
 summaryBuilder_helpTextIntro=Les fonctions suivantes sont disponibles :
 
-calendar_invalidDateMessage=Date de d&#233;but doit &#234;tre avant date de fin
+calendar_invalidDateMessage=Date de début doit être avant date de fin
 
 filterBuilder_topOperator=et
 filterBuilder_radioOptions_and=et
@@ -176,8 +176,8 @@ calendar_dayViewTitle=Jour
 calendar_weekViewTitle=Semaine
 calendar_monthViewTitle=Mois
 calendar_timelineViewTitle=Calendrier
-calendar_eventNameFieldTitle=Nom de l'evenement
-calendar_saveButtonTitle=Sauve l'evenement
+calendar_eventNameFieldTitle=Nom de l''evenement
+calendar_saveButtonTitle=Sauve l''evenement
 calendar_detailsButtonTitle=Modifier les détails
 calendar_cancelButtonTitle=Annuler
 calendar_previousButtonHoverText=Précédent
@@ -190,7 +190,7 @@ filterBuilder_subClauseButtonPrompt=Ajouter un filtre
 filterBuilder_addButtonPrompt=Ajouter
 filterBuilder_removeButtonPrompt=Supprimer
 
-printWindow_title=Apercu avant impression
+printWindow_title=Aperçu avant impression
 printWindow_printButtonTitle=Imprimer
 
 pickTreeItem_emptyMenuMessage=Aucune entrée à afficher
