--- a/trunk/main/src/com/smartgwt/client/i18n/SmartGwtMessages_ro_RO.properties
+++ b/trunk/main/src/com/smartgwt/client/i18n/SmartGwtMessages_ro_RO.properties
@@ -157,14 +157,39 @@ treeGrid_cantDragIntoChildMessage=Nu puteţi trage un element peste unul dintre 
 menuButton_title=Afişare meniu
 
 formulaBuilder_autoHideCheckBoxLabel=Auto ascunde câmpurile folosite în formulă
-formulaBuilder_helpTextIntro=Următoarele funcţii sunt disponibile:
+formulaBuilder_helpTextIntro=Pentru operaţii aritmetice de bază, tastaţi direct simbolurile (+-/%).<p>Următoarele funcţii sunt disponibile:
+formulaBuilder_instructionsTextStart=Următoarele câmpuri sunt disponibile pentru utilizare în
+formulaBuilder_samplePromptForRecord=Pentru înregistrarea:
+formulaBuilder_samplePromptOutput=Rezultat:
 
 summaryBuilder_autoHideCheckBoxLabel=Auto ascunde câmpurile folosite în sumar
 summaryBuilder_helpTextIntro=Următoarele funcţii sunt disponibile:
 
 calendar_invalidDateMessage=Data de început trebuie să fie înaintea datei de terminare
+calendar_dayViewTitle=Zi
+calendar_weekViewTitle=Săptămână
+calendar_monthViewTitle=Lună
+calendar_timelineViewTitle=Cronologie
+calendar_eventNameFieldTitle=Eveniment
+calendar_saveButtonTitle=Salvaţi evenimentul
+calendar_detailsButtonTitle=Editaţi detaliile
+calendar_cancelButtonTitle=Anulaţi
+calendar_previousButtonHoverText=Precedentul
+calendar_nextButtonHoverText=Următorul
+calendar_addEventButtonHoverText=Adăugaţi un eveniment
+calendar_datePickerHoverText=Alegeţi o dată
 
 filterBuilder_topOperator=şi
 filterBuilder_radioOptions_and=şi
 filterBuilder_radioOptions_or=sau
 filterBuilder_radioOptions_not=nu
+filterBuilder_rangeSeparator=şi
+filterBuilder_subClauseButtonPrompt=Adăugaţi subclauză
+filterBuilder_addButtonPrompt=Adăugaţi
+filterBuilder_removeButtonPrompt=Ştergeţi
+
+printWindow_title=Previzualizare Tipărire
+printWindow_printButtonTitle=Tipărire
+
+pickTreeItem_emptyMenuMessage=Nu există elemente pentru afişare
+
