updated french resource bundles

--- a/main/src/com/smartgwt/client/i18n/SmartGwtMessages_fr.properties
+++ b/main/src/com/smartgwt/client/i18n/SmartGwtMessages_fr.properties
@@ -1,18 +1,3 @@
-#
-# SmartGWT (GWT for SmartClient)
-# Copyright 2008 and beyond, Isomorphic Software, Inc.
-#
-# SmartGWT is free software; you can redistribute it and/or modify it
-# under the terms of the GNU Lesser General Public License version 3
-# as published by the Free Software Foundation.  SmartGWT is also
-# available under typical commercial license terms - see
-# http://smartclient.com/license
-# This software is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
-# Lesser General Public License for more details.
-#
-
 dialog_OkButtonTitle=OK
 dialog_ApplyButtonTitle=Appliquer
 dialog_YesButtonTitle=Oui
@@ -30,17 +15,17 @@ dialog_LoginButtonTitle=Connexion
 dialog_LoginErrorMessage=Nom d''utilisateur ou mot de passe invalide
 
 rpcManager_defaultPrompt=Connexion au serveur...
-rpcManager_timeoutErrorMessage=Temps dépassé
+rpcManager_timeoutErrorMessage=Temps d√©pass√©
 rpcManager_removeDataPrompt=Suppresion enregistrement(s)...
 rpcManager_saveDataPrompt=Sauvegarde du formulaire...
-rpcManager_fetchDataPrompt=Recherche des enregistrements correspondant à vos critères...
+rpcManager_fetchDataPrompt=Recherche des enregistrements correspondant √† vos crit√®res...
 
-operators_equalsTitle=égal
-operators_notEqualTitle=différent
+operators_equalsTitle=√©gal
+operators_notEqualTitle=diff√©rent
 operators_greaterThanTitle=plus grand que
 operators_lessThanTitle=plus petit que
-operators_greaterOrEqualTitle=supérieur ou égal à
-operators_lessOrEqualTitle=inférieur ou égal à
+operators_greaterOrEqualTitle=sup√©rieur ou √©gal √†
+operators_lessOrEqualTitle=inf√©rieur ou √©gal √†
 operators_betweenTitle=compris entre
 operators_betweenInclusiveTitle=compris entre (inclusif)
 operators_iContainsTitle=contient
@@ -61,8 +46,8 @@ operators_regexpTitle=satisfait l''expression (respecte la casse)
 operators_iregexpTitle=satisfait l''expression
 operators_inSetTitle=est l''un(e) de
 operators_notInSetTitle=n''est pas l''un(e) de
-operators_equalsFieldTitle=est égal à un autre champ
-operators_notEqualFieldTitle=est différent d''un autre champ
+operators_equalsFieldTitle=est √©gal √† un autre champ
+operators_notEqualFieldTitle=est diff√©rent d''un autre champ
 operators_andTitle=Satisfait tout
 operators_notTitle=Ne Satisfait aucun
 operators_orTitle=Safisfait certains
@@ -73,28 +58,28 @@ grouping_upcomingThisWeekTitle=Cette Semaine
 grouping_upcomingNextWeekTitle=Semaine Prochaine
 grouping_upcomingNextMonthTitle=Mois Prochain
 grouping_upcomingBeforeTitle=Avant
-grouping_upcomingLaterTitle=Après
+grouping_upcomingLaterTitle=Apr√®s
 grouping_byDayTitle=par Jour
 grouping_byWeekTitle=par Semaine
 grouping_byMonthTitle=par Mois
 grouping_byQuarterTitle=par Trimestre
-grouping_byYearTitle=par Année
+grouping_byYearTitle=par Ann√©e
 grouping_byDayOfMonthTitle=par Jour du Mois
-grouping_byUpcomingTitle=par ordre d''arrivée
+grouping_byUpcomingTitle=par ordre d''arriv√©e
 grouping_byHoursTitle=par Heures
 grouping_byMinutesTitle=par Minutes
 grouping_bySecondsTitle=par Secondes
 grouping_byMillisecondsTitle=par Millisecondes
 
-validator_notABoolean=Doit être une valeur vrai/faux.
-validator_notAString=Doit être une chaîne de caractères.
-validator_notAnInteger=Doit être une nombre entier.
-validator_notADecimal=Doit être un nombre décimal.
-validator_notADate=Doit être une date.
-validator_mustBeLessThan==Doit être au plus
-validator_mustBeGreaterThan=Doit être au moins
-validator_mustBeLaterThan=Doit être plus tard que
-validator_mustBeEarlierThan=Doit être plus tôt que
+validator_notABoolean=Doit √™tre une valeur vrai/faux.
+validator_notAString=Doit √™tre une cha√Æne de caract√®res.
+validator_notAnInteger=Doit √™tre une nombre entier.
+validator_notADecimal=Doit √™tre un nombre d√©cimal.
+validator_notADate=Doit √™tre une date.
+validator_mustBeLessThan==Doit √™tre au plus
+validator_mustBeGreaterThan=Doit √™tre au moins
+validator_mustBeLaterThan=Doit √™tre plus tard que
+validator_mustBeEarlierThan=Doit √™tre plus t√¥t que
 validator_mustBeShorterThan=Doit contenir moins de lettres que
 validator_mustBeLongerThan=Doit contenir plus de lettres que
 validator_mustBeExactLength=Doit contenir exactement le nombre de lettres
@@ -125,62 +110,62 @@ date_shortMonthNames_12=Dec
 time_AMIndicator= am
 time_PMIndicator= pm
 
-window_title=Fenêtre sans titre
+window_title=Fen√™tre sans titre
 
 dateChooser_todayButtonTitle=Aujourd''hui
 dateChooser_cancelButtonTitle=Annuler
 
-dynamicForm_errorsPreamble=Les erreurs suivantes ont été rencontrées
+dynamicForm_errorsPreamble=Les erreurs suivantes ont √©t√© rencontr√©es
 dynamicForm_unknownErrorMessage=Valeur invalide
 
 selectOtherItem_otherTitle=Autres...
 selectOtherItem_selectOtherPrompt=Autre valeur pour <br> ?
 
 dateItem_invalidDateStringMessage=date invalide
-dateItem_pickerIconPrompt=Afficher le Sélecteur de Date
+dateItem_pickerIconPrompt=Afficher le S√©lecteur de Date
 
 valuesManager_unknownErrorMessage=valeur invalide
 
-selection_selectionRangeNotLoadedMessage=Impossible de sélectionner autant d''enregistrements d''un coup.<br><br>Essayez de travailler avec moins d''éléments.
+selection_selectionRangeNotLoadedMessage=Impossible de s√©lectionner autant d''enregistrements d''un coup.<br><br>Essayez de travailler avec moins d''√©l√©ments.
 
-listGrid_emptyMessage=Aucune donnée à afficher.
-listGrid_loadingDataMessage=Chargement des données...
+listGrid_emptyMessage=Aucune donn√©e √† afficher.
+listGrid_loadingDataMessage=Chargement des donn√©es...
 #listGrid_loadingMessage=
-listGrid_cancelEditingConfirmationMessage=Annuler cette édition va également annuler toutes les éditions non sauvées pour cet enregistrement. Continuer ?
-listGrid_confirmDiscardEditsMessage=Cette action annulera toutes les modifications non sauvées pour cette liste.
+listGrid_cancelEditingConfirmationMessage=Annuler cette √©dition va √©galement annuler toutes les √©ditions non sauv√©es pour cet enregistrement. Continuer ?
+listGrid_confirmDiscardEditsMessage=Cette action annulera toutes les modifications non sauv√©es pour cette liste.
 listGrid_discardEditsSaveButtonTitle=Sauver
 listGrid_freezeOnRightText=Geler par la droite
 listGrid_freezeOnLeftText=Geler par la gauche
 listGrid_sortFieldAscendingText=Trier par ordre Croissant
-listGrid_sortFieldDescendingText=Trier par ordre Décroissant
+listGrid_sortFieldDescendingText=Trier par ordre D√©croissant
 listGrid_fieldVisibilitySubmenuTitle=Colonnes
 listGrid_freezeFieldText=Geler
-listGrid_unfreezeFieldText=Dégeler
+listGrid_unfreezeFieldText=D√©geler
 listGrid_groupByText=Grouper par
-listGrid_ungroupText=Dégrouper
+listGrid_ungroupText=D√©grouper
 
 dataBoundComponent_addFormulaFieldText=Ajouter une colonne Formule...
-dataBoundComponent_editFormulaFieldText=Éditer la formule...
+dataBoundComponent_editFormulaFieldText=√âditer la formule...
 dataBoundComponent_addSummaryFieldText=Ajouter une colonne Somme...
-dataBoundComponent_editSummaryFieldText=Éditer le format de la somme...
+dataBoundComponent_editSummaryFieldText=√âditer le format de la somme...
 dataBoundComponent_requiredFieldMessage=Champ requis
 
-treeGrid_parentAlreadyContainsChildMessage=Cet élément contient déjà un élément enfant avec ce nom.
-treeGrid_cantDragIntoSelfMessage=Vous ne pouvez pas déplacer cet élément vers lui-même.
-treeGrid_cantDragIntoChildMessage=Vous ne pouvez pas déplacer un élément vers l''un de ses éléments enfant.
+treeGrid_parentAlreadyContainsChildMessage=Cet √©l√©ment contient d√©j√† un √©l√©ment enfant avec ce nom.
+treeGrid_cantDragIntoSelfMessage=Vous ne pouvez pas d√©placer cet √©l√©ment vers lui-m√™me.
+treeGrid_cantDragIntoChildMessage=Vous ne pouvez pas d√©placer un √©l√©ment vers l''un de ses √©l√©ments enfant.
 
 menuButton_title=Voir le Menu
 
-formulaBuilder_autoHideCheckBoxLabel=Cacher automatiquement les champs utilisés dans la formule
-formulaBuilder_helpTextIntro=Pour les opérations simples, utiliser directement les opérateurs (+-/%)<p>Les fonctions suivantes sont disponibles :
-formulaBuilder_instructionsTextStart=Les champs suivants peuvent être utilisés pour ce
+formulaBuilder_autoHideCheckBoxLabel=Cacher automatiquement les champs utilis√©s dans la formule
+formulaBuilder_helpTextIntro=Pour les op√©rations simples, utiliser directement les op√©rateurs (+-/%)<p>Les fonctions suivantes sont disponibles :
+formulaBuilder_instructionsTextStart=Les champs suivants peuvent √™tre utilis√©s pour ce
 formulaBuilder_samplePromptForRecord=Pour l''enregistrment :
-formulaBuilder_samplePromptOutput=Résultat:
+formulaBuilder_samplePromptOutput=R√©sultat:
 
-summaryBuilder_autoHideCheckBoxLabel=Cacher automatiquement les champs utilisés dans la somme
+summaryBuilder_autoHideCheckBoxLabel=Cacher automatiquement les champs utilis√©s dans la somme
 summaryBuilder_helpTextIntro=Les fonctions suivantes sont disponibles :
 
-calendar_invalidDateMessage=Date de début doit être avant date de fin
+calendar_invalidDateMessage=Date de d√©but doit √™tre avant date de fin
 
 filterBuilder_topOperator=et
 filterBuilder_radioOptions_and=et
@@ -193,9 +178,9 @@ calendar_monthViewTitle=Mois
 calendar_timelineViewTitle=Calendrier
 calendar_eventNameFieldTitle=Nom de l''evenement
 calendar_saveButtonTitle=Sauve l''evenement
-calendar_detailsButtonTitle=Modifier les détails
+calendar_detailsButtonTitle=Modifier les d√©tails
 calendar_cancelButtonTitle=Annuler
-calendar_previousButtonHoverText=Précédent
+calendar_previousButtonHoverText=Pr√©c√©dent
 calendar_nextButtonHoverText=Suivant
 calendar_addEventButtonHoverText=Ajouter un evenement
 calendar_datePickerHoverText=Choisir une date
@@ -205,7 +190,7 @@ filterBuilder_subClauseButtonPrompt=Ajouter un filtre
 filterBuilder_addButtonPrompt=Ajouter
 filterBuilder_removeButtonPrompt=Supprimer
 
-printWindow_title=Aperçu avant impression
+printWindow_title=Aper√ßu avant impression
 printWindow_printButtonTitle=Imprimer
 
-pickTreeItem_emptyMenuMessage=Aucune entrée à afficher
+pickTreeItem_emptyMenuMessage=Aucune entr√©e √† afficher
