--- a/trunk/main/src/com/smartgwt/client/i18n/SmartGwtMessages_pl.properties
+++ b/trunk/main/src/com/smartgwt/client/i18n/SmartGwtMessages_pl.properties
@@ -143,6 +143,7 @@ listGrid_freezeFieldText=Zablokuj
 listGrid_unfreezeFieldText=Odblokuj
 listGrid_groupByText=Grupuj
 listGrid_ungroupText=Rozgrupuj
+
 dataBoundComponent_addFormulaFieldText=Dodaj wartość kolumny...
 dataBoundComponent_editFormulaFieldText=Edytuj wartość...
 dataBoundComponent_addSummaryFieldText=Dodaj kolumnę podsumowującą...
@@ -151,19 +152,44 @@ dataBoundComponent_requiredFieldMessage=Pole jest wymagane
 
 treeGrid_parentAlreadyContainsChildMessage=Objekt już zawiera podobiekt z tą nazwą.
 treeGrid_cantDragIntoSelfMessage=Nie możesz przeciągnąc objektu do siebie samego.
-treeGrid_cantDragIntoChildMessage=nie możesz przeciągnąc objektu do jednego z podobiektów.
+treeGrid_cantDragIntoChildMessage=Nie możesz przeciągnąc objektu do jednego z podobiektów.
 
 menuButton_title=Pokaż menu
 
 formulaBuilder_autoHideCheckBoxLabel=Auto ukrywanie pól uźytych w formule
 formulaBuilder_helpTextIntro=Dostępne są poniższe funkcje:
+formulaBuilder_instructionsTextStart=Dostępne są poniższe pola
+formulaBuilder_samplePromptForRecord=Dla zapisu:
+formulaBuilder_samplePromptOutput=Wyjście:
 
 summaryBuilder_autoHideCheckBoxLabel=Auto ukrywanie pól użytych w podsumowaniu
 summaryBuilder_helpTextIntro=Dostępne są poniższe funkcje:
 
 calendar_invalidDateMessage=Od musi być przed Po
+calendar_dayViewTitle=Dzien
+calendar_weekViewTitle=Tydzien
+calendar_monthViewTitle=Miesiąc
+calendar_timelineViewTitle=Oś czasowa
+calendar_eventNameFieldTitle=Imię wydarzenia
+calendar_saveButtonTitle=Zapisać wydarzenie
+calendar_detailsButtonTitle=Edztuj detal
+calendar_cancelButtonTitle=Anuluj
+calendar_previousButtonHoverText=Poprzedni
+calendar_nextButtonHoverText=Następny
+calendar_addEventButtonHoverText=Dodaj wydarzenie
+calendar_datePickerHoverText=Wybierz datum
 
 filterBuilder_topOperator=i
 filterBuilder_radioOptions_and=i
 filterBuilder_radioOptions_or=lub
 filterBuilder_radioOptions_not=nie
+filterBuilder_rangeSeparator=i
+filterBuilder_subClauseButtonPrompt=Wpisać podwyrażenie
+filterBuilder_addButtonPrompt=Dodaj
+filterBuilder_removeButtonPrompt=Usuń
+
+
+printWindow_title=Pokaz druku
+printWindow_printButtonTitle=Druk
+
+pickTreeItem_emptyMenuMessage=Brak objektów do wyświetlenia.
