--- a/main/src/com/smartgwt/client/i18n/SmartGwtMessages_sk.properties
+++ b/main/src/com/smartgwt/client/i18n/SmartGwtMessages_sk.properties
@@ -24,6 +24,8 @@ operators_equalsTitle=rovné
 operators_notEqualTitle=nie je rovné
 operators_greaterThanTitle=väčsie ako
 operators_lessThanTitle=menšie ako
+operators_greaterOrEqualTitle=väčsie alebo rovné
+operators_lessOrEqualTitle=menšie alebo rovné
 operators_betweenTitle=medzi
 operators_betweenInclusiveTitle=medzi (vrátane)
 operators_iContainsTitle=obsahuje
@@ -141,6 +143,7 @@ listGrid_freezeFieldText=Prichytiť
 listGrid_unfreezeFieldText=Zrušiť prichytenie
 listGrid_groupByText=Zoskupiť podľa
 listGrid_ungroupText=Zrušiť zoskupenie
+
 dataBoundComponent_addFormulaFieldText=Pridať stĺpec so vzorcom...
 dataBoundComponent_editFormulaFieldText=Upraviť stĺpec...
 dataBoundComponent_addSummaryFieldText=Pridať sumárny stĺpec...
@@ -155,8 +158,38 @@ menuButton_title=Zobraziť menu
 
 formulaBuilder_autoHideCheckBoxLabel=Automaticky skryť polia použité vo vzorci
 formulaBuilder_helpTextIntro=Sú dostupné nasledujúce funkcie:
+formulaBuilder_instructionsTextStart=Sú dostupné nasledujúce polia
+formulaBuilder_samplePromptForRecord=Pre záznam:
+formulaBuilder_samplePromptOutput=Výstup:
 
 summaryBuilder_autoHideCheckBoxLabel=Automaticky skryť polia použité v sumári
 summaryBuilder_helpTextIntro=Sú dostupné nasledujúce funkcie:
 
 calendar_invalidDateMessage=Dátum od musí byť pred dátumom do
+calendar_dayViewTitle=Deň
+calendar_weekViewTitle=Týždeň
+calendar_monthViewTitle=Mesiac
+calendar_timelineViewTitle=Časová osa
+calendar_eventNameFieldTitle=Názov události
+calendar_saveButtonTitle=Uložiť událosť
+calendar_detailsButtonTitle=Editovať detail
+calendar_cancelButtonTitle=Storno
+calendar_previousButtonHoverText=Predošlý
+calendar_nextButtonHoverText= Ďalší
+calendar_addEventButtonHoverText=Pridať událosť
+calendar_datePickerHoverText=Vybrat dátum
+
+filterBuilder_topOperator=a
+filterBuilder_radioOptions_and=a
+filterBuilder_radioOptions_or=alebo
+filterBuilder_radioOptions_not=negácija
+filterBuilder_rangeSeparator=a
+filterBuilder_subClauseButtonPrompt=Vložiť podvýraz
+filterBuilder_addButtonPrompt=Pridať
+filterBuilder_removeButtonPrompt=Odobrať
+
+
+printWindow_title=Preview tlače
+printWindow_printButtonTitle=Tlač
+
+pickTreeItem_emptyMenuMessage=Žiadne položky pre zobrazenie.
