--- a/trunk/main/src/com/smartgwt/client/i18n/SmartGwtMessages_pt_BR.properties
+++ b/trunk/main/src/com/smartgwt/client/i18n/SmartGwtMessages_pt_BR.properties
@@ -76,8 +76,8 @@ validator_notAString=Deve ser um texto.
 validator_notAnInteger=Deve ser um número inteiro.
 validator_notADecimal=Deve ser um número decimal.
 validator_notADate=Deve ser uma data.
-validator_mustBeLessThan=Deve ser maior que
-validator_mustBeGreaterThan=Deve ser menor que 
+validator_mustBeLessThan=Não deve exceder
+validator_mustBeGreaterThan=Deve ser pelo menos 
 validator_mustBeLaterThan=Deve ser depois de
 validator_mustBeEarlierThan=Deve ser antes de
 validator_mustBeShorterThan=Deve ser menos que caracteres
