--- a/wiki/Tutorials.wiki
+++ b/wiki/Tutorials.wiki
@@ -6,6 +6,7 @@ Various SmartGWT tutorials and resources from the web.
 = Tutorials =
  * Running SmartGWT with Google App Engine (GAE) : http://forums.smartclient.com/showthread.php?t=5258
 
+ * SmartGWT with Grails : http://www.cacoethes.co.uk/blog/?p=27
 
 *SmartGWT with Eclipse*
 
