--- a/main/src/com/smartgwt/client/i18n/SmartGwtMessages.properties
+++ b/main/src/com/smartgwt/client/i18n/SmartGwtMessages.properties
@@ -80,9 +80,9 @@ validator_mustBeLessThan=Must be no more than
 validator_mustBeGreaterThan=Must be at least 
 validator_mustBeLaterThan=Must be later than
 validator_mustBeEarlierThan=Must be earlier than
-validator_mustBeShorterThan=Must be less than characters
-validator_mustBeLongerThan=Must be more than characters
-validator_mustBeExactLength=Must be exactly characters
+validator_mustBeShorterThan=Must be less than ${max} characters
+validator_mustBeLongerThan=Must be more than ${min} characters
+validator_mustBeExactLength=Must be exactly ${max} characters
 validator_requiredField=Field is required
 validator_notOneOf=Not a valid option
 
