i18n enhancements : added missing translations

--- a/main/src/com/smartgwt/client/i18n/SmartGwtMessages_el.properties
+++ b/main/src/com/smartgwt/client/i18n/SmartGwtMessages_el.properties
@@ -160,3 +160,28 @@ summaryBuilder_autoHideCheckBoxLabel=Αυτόματη απόκρυψη των π
 summaryBuilder_helpTextIntro=Οι κάτωθι επιλογές είναι διαθέσιμες:
 
 calendar_invalidDateMessage=Το 'Από' πρέπει να είναι νωρίτερο από το 'Έως'
+operators_greaterOrEqualTitle=μεγαλύτερο ή ίσο με
+operators_lessOrEqualTitle=μικρότερη ή ίση
+formulaBuilder_instructionsTextStart=Τα παρακάτω πεδία είναι διαθέσιμα για χρήση σε αυτό το
+formulaBuilder_samplePromptForRecord=Για εγγραφή:
+formulaBuilder_samplePromptOutput=Έξοδος:
+calendar_dayViewTitle=Ημέρα
+calendar_weekViewTitle=Εβδομάδα
+calendar_monthViewTitle=Μήνας
+calendar_cancelButtonTitle=Άκυρο
+calendar_previousButtonHoverText=Προηγούμενη
+calendar_nextButtonHoverText=Επόμενος
+calendar_datePickerHoverText=Επιλέξτε μια ημερομηνία
+filterBuilder_topOperator=και
+filterBuilder_radioOptions_and=και
+filterBuilder_radioOptions_or=ή
+filterBuilder_radioOptions_not=δεν
+filterBuilder_rangeSeparator=και
+filterBuilder_addButtonPrompt=Προσθέτω
+filterBuilder_removeButtonPrompt=Αφαιρώ
+printWindow_title=Προεπισκόπηση εκτύπωσης
+printWindow_printButtonTitle=Εκτύπωση
+pickTreeItem_emptyMenuMessage=Δεν υπάρχουν στοιχεία για την εμφάνιση
+filterBuilder_subClauseButtonPrompt=Προσθήκη Subclause
+calendar_addEventButtonHoverText=Προσθέστε μια εκδήλωση
+calendar_saveButtonTitle=Αποθήκευση Event
