--- a/main/src/com/smartgwt/client/i18n/SmartGwtMessages_pt.properties
+++ b/main/src/com/smartgwt/client/i18n/SmartGwtMessages_pt.properties
@@ -160,3 +160,30 @@ summaryBuilder_autoHideCheckBoxLabel=Ocultar automaticamente campos utilizados n
 summaryBuilder_helpTextIntro=As seguintes funções são disponíveis:
 
 calendar_invalidDateMessage=Data Início tem que estar antes de Data Fim
+operators_greaterOrEqualTitle=maior ou igual a
+operators_lessOrEqualTitle=inferior ou igual a
+formulaBuilder_instructionsTextStart=Os seguintes campos estão disponíveis para uso no presente
+formulaBuilder_samplePromptForRecord=Para gravar:
+formulaBuilder_samplePromptOutput=Saída:
+calendar_dayViewTitle=Dia
+calendar_weekViewTitle=Semana
+calendar_monthViewTitle=Mês
+calendar_eventNameFieldTitle=Nome do Evento
+calendar_saveButtonTitle=Salvar Evento
+calendar_detailsButtonTitle=Editar detalhes
+calendar_cancelButtonTitle=Cancelar
+calendar_previousButtonHoverText=Anterior
+calendar_nextButtonHoverText=Próximo
+calendar_addEventButtonHoverText=Adicione um evento
+calendar_datePickerHoverText=Escolha uma data
+filterBuilder_topOperator=e
+filterBuilder_radioOptions_and=e
+filterBuilder_radioOptions_or=ou
+filterBuilder_radioOptions_not=não
+filterBuilder_rangeSeparator=e
+filterBuilder_subClauseButtonPrompt=Adicionar subcláusula
+filterBuilder_addButtonPrompt=Adicionar
+filterBuilder_removeButtonPrompt=Remover
+printWindow_title=Visualização de Impressão
+printWindow_printButtonTitle=Imprimir
+pickTreeItem_emptyMenuMessage=Não há itens para exibir
