--- a/main/src/com/smartgwt/client/i18n/SmartGwtMessages_zh_CN.properties
+++ b/main/src/com/smartgwt/client/i18n/SmartGwtMessages_zh_CN.properties
@@ -1,4 +1,4 @@
-﻿dialog_OkButtonTitle=确定
+dialog_OkButtonTitle=确定
 dialog_ApplyButtonTitle=应用
 dialog_YesButtonTitle=是
 dialog_NoButtonTitle=否
@@ -168,3 +168,25 @@ filterBuilder_topOperator=和
 filterBuilder_radioOptions_and=和
 filterBuilder_radioOptions_or=或
 filterBuilder_radioOptions_not=非
+formulaBuilder_instructionsTextStart=以下字段可使用此
+formulaBuilder_samplePromptForRecord=备案：
+formulaBuilder_samplePromptOutput=輸出：
+calendar_dayViewTitle=白天
+calendar_weekViewTitle=週
+calendar_monthViewTitle=本月
+calendar_eventNameFieldTitle=事件名稱
+calendar_saveButtonTitle=保存事件
+calendar_detailsButtonTitle=编辑详情
+calendar_cancelButtonTitle=取消
+calendar_previousButtonHoverText=上一页
+calendar_nextButtonHoverText=下一个
+calendar_addEventButtonHoverText=添加一个事件
+calendar_datePickerHoverText=选择日期
+filterBuilder_rangeSeparator=和
+filterBuilder_subClauseButtonPrompt=增补
+filterBuilder_addButtonPrompt=添加
+filterBuilder_removeButtonPrompt=删除
+printWindow_title=打印预览
+printWindow_printButtonTitle=打印
+pickTreeItem_emptyMenuMessage=没有条目来显示
+calendar_timelineViewTitle=时间轴
