--- a/main/src/com/smartgwt/client/i18n/SmartGwtMessages_pt_BR.properties
+++ b/main/src/com/smartgwt/client/i18n/SmartGwtMessages_pt_BR.properties
@@ -168,3 +168,24 @@ filterBuilder_topOperator=e
 filterBuilder_radioOptions_and=e
 filterBuilder_radioOptions_or=ou
 filterBuilder_radioOptions_not=não
+formulaBuilder_instructionsTextStart=Os seguintes campos estão disponíveis para uso no presente
+formulaBuilder_samplePromptForRecord=Para gravar:
+formulaBuilder_samplePromptOutput=Saída:
+calendar_dayViewTitle=Dia
+calendar_weekViewTitle=Semana
+calendar_monthViewTitle=Mês
+calendar_eventNameFieldTitle=Nome do Evento
+calendar_saveButtonTitle=Salvar Evento
+calendar_detailsButtonTitle=Editar detalhes
+calendar_cancelButtonTitle=Cancelar
+calendar_previousButtonHoverText=Anterior
+calendar_nextButtonHoverText=Próximo
+calendar_addEventButtonHoverText=Adicione um evento
+calendar_datePickerHoverText=Escolha uma data
+filterBuilder_rangeSeparator=e
+filterBuilder_subClauseButtonPrompt=Adicionar subcláusula
+filterBuilder_addButtonPrompt=Adicionar
+filterBuilder_removeButtonPrompt=Remover
+printWindow_title=Visualização de Impressão
+printWindow_printButtonTitle=Imprimir
+pickTreeItem_emptyMenuMessage=Não há itens para exibir
