--- a/wiki/NightlyBuilds_and_MavenRepository.wiki
+++ b/wiki/NightlyBuilds_and_MavenRepository.wiki
@@ -8,7 +8,7 @@ Repository: http://www.smartclient.com/maven2
 
    Group Id: com.smartgwt
    Artifact Id: smartgwt
-   Version: 1.2-SNAPSHOT
+   Version: 2.0-SNAPSHOT
 }}}
 
 
@@ -19,5 +19,26 @@ Repository: http://www.smartclient.com/maven2
 
    Group Id: com.smartgwt
    Artifact Id: smartgwt-skins
-   Version: 1.2-SNAPSHOT
+   Version: 2.0-SNAPSHOT
+}}}
+
+For SmartGWT 1.3 Release
+
+{{{
+Repository: http://www.smartclient.com/maven2
+
+   Group Id: com.smartgwt
+   Artifact Id: smartgwt
+   Version: 1.3
+}}}
+
+
+Artifact for smartgwt-skins
+
+{{{
+Repository: http://www.smartclient.com/maven2
+
+   Group Id: com.smartgwt
+   Artifact Id: smartgwt-skins
+   Version: 1.3
 }}}
